--- a/proj0/CourseTracker/build.gradle
+++ b/proj0/CourseTracker/build.gradle
@@ -32,4 +32,11 @@ dependencies {
 	
 	// https://mvnrepository.com/artifact/log4j/log4j
 	compile group: 'log4j', name: 'log4j', version: '1.2.17'
+	
+	// https://mvnrepository.com/artifact/io.javalin/javalin
+	compile group: 'io.javalin', name: 'javalin', version: '3.11.2'
+	
+	// https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+	compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
+
 }
