--- a/proj0/CourseTracker/bin/main/log4j.properties
+++ b/proj0/CourseTracker/bin/main/log4j.properties
@@ -1,5 +1,5 @@
 #Root logger option
-log4j.rootLogger=TRACE, stdout, file
+log4j.rootLogger=TRACE, file
 
 #Direct log message to stdout
 #log4j.appender.stdout=org.apache.log4j.ConsoleAppender
